Update and rename docs/_pages/page-code.md to docs/_posts/2022-01-01-page-code.md

--- a/docs/_posts/2022-01-01-page-code.md
+++ b/docs/_posts/2022-01-01-page-code.md
@@ -3,7 +3,7 @@ title: Code
 permalink: /code/
 sitemap: false
 layout: splash
-category: Page
+categories: ["Page]
 ---
 
 {% include_relative code/check-code.html %}
